--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="jquery-1.12.3.js"></script>
 
 </head>
-<body>
+<body style="height:2000px">
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
