--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="height:2000px">
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
