--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body style="height:2000px">
-
+<div class="navigationbar">
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -60,5 +60,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+</div>
+<div class="first" style="background-image:url("http://i661.photobucket.com/albums/uu332/ilovemooks/nature-1.jpg");height:100%;width:100%">
+  
+</div>
 </body>
 </html>
