--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 </div>
-<div class="first" style="background-image:url("http://i661.photobucket.com/albums/uu332/ilovemooks/nature-1.jpg");height:100%;width:100%">
+<div class="wall1" style="background-image:url("http://i661.photobucket.com/albums/uu332/ilovemooks/nature-1.jpg");height:100%;width:100%">
   
 </div>
 </body>
