--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="jquery-1.12.3.js"></script>
 
 </head>
-<body style="height:2000px">
+<body >
 <div class="navigationbar">
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -62,7 +62,7 @@
 </nav>
 </div>
 <div class="wall1" style="background-red;height:100%;width:100%">
-  
+  helllloooooo
 </div>
 </body>
 </html>
