--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <link rel="stylesheet" type=text/css href="bootstrap.min.css">
 <script src="bootstrap.min.js"></script>
 <script src="jquery-1.12.3.js"></script>
-
+<style>
+  .wall1
+  {
+        height: 100%;
+    width: 100%;
+    background-image: url("http://i661.photobucket.com/albums/uu332/ilovemooks/nature-1.jpg");
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
 </head>
 <body >
 <div class="navigationbar">
@@ -61,8 +71,8 @@
   </div><!-- /.container-fluid -->
 </nav>
 </div>
-<div class="wall1" style="background-red;height:100%;width:100%">
-  helllloooooo
+<div class="wall1">
+ 
 </div>
 </body>
 </html>
