--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     background-size: cover;
   }
   .wall1>div
-  {
+  {    margin-top: 200;
+    font-size: 70;
+    font-family: cursive;
+    font-weight: bolder;
+    text-align: center;
    z-index:2;
    color:red;
    
