--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 </nav>
 </div>
 <div class="wall1">
-  <div class="text1"> YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES </div>
+  <div class="text1"> <p>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</p><br>
+  <center>___</center></div>
 </div>
+
 </body>
 </html>
