--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  .wall1>div
+  .wall1>text1
   {    margin-top: 200;
     font-size: 70;
     font-family: cursive;
@@ -82,9 +82,8 @@
 </nav>
 </div>
 <div class="wall1">
-  <div class="text1"> <p>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</p><br>
-  <center>___</center></div>
+  <div class="text1">YOUR FAVORITE SOURCE OF 
 </div>
-
+  <div class="text2">FREE BOOTSTRAP THEMES</div>
 </body>
 </html>
