--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  .wall1>text1
+  .text1
   {    margin-top: 200;
     font-size: 70;
     font-family: cursive;
