--- a/index.html
+++ b/index.html
@@ -15,12 +15,28 @@
   }
   .text1
   {    margin-top: 200;
-    font-size: 70;
+    font-size: 40;
     font-family: cursive;
     font-weight: bolder;
     text-align: center;
    z-index:2;
    color:red;
+   margin-left: 20%;
+    margin-right: 20%;
+    background:black;
+   
+  }
+  .text2
+  {    margin-top: 230;
+    font-size: 40;
+    font-family: cursive;
+    font-weight: bolder;
+    text-align: center;
+   z-index:2;
+   color:red;
+   margin-left: 20%;
+    margin-right: 20%;
+    background:black;
    
   }
 </style>
