--- a/index.html
+++ b/index.html
@@ -20,24 +20,34 @@
     font-weight: bolder;
     text-align: center;
    z-index:2;
-   color:red;
+   color:white;
    margin-left: 20%;
     margin-right: 20%;
     background:black;
    
   }
   .text2
-  {    margin-top: 230;
+  {    margin-top: 0;
     font-size: 40;
     font-family: cursive;
     font-weight: bolder;
     text-align: center;
    z-index:2;
-   color:red;
-   margin-left: 20%;
-    margin-right: 20%;
+   color:white;
+   margin-left: 21%;
+    margin-right: 21%;
     background:black;
    
+  }
+  .text3
+  {
+    margin-top:20;
+    font-size: 40;
+    font-family: cursive;
+    font-weight: bolder;
+    text-align: center;
+   z-index:2;
+   color:orange;
   }
 </style>
 </head>
@@ -102,4 +112,7 @@
 </div>
   <div class="text2">FREE BOOTSTRAP THEMES</div>
 </body>
+  <div class="text3">____</div>
+</body>
+
 </html>
