--- a/index.html
+++ b/index.html
@@ -15,28 +15,24 @@
   }
   .text1
   {    margin-top: 200;
-    font-size: 40;
+    font-size:60;
     font-family: cursive;
     font-weight: bolder;
     text-align: center;
    z-index:2;
-   color:white;
-   margin-left: 20%;
-    margin-right: 20%;
-    background:black;
+   color:red;
+   
    
   }
   .text2
   {    margin-top: 0;
-    font-size: 40;
+    font-size: 60;
     font-family: cursive;
     font-weight: bolder;
     text-align: center;
    z-index:2;
-   color:white;
-   margin-left: 21%;
-    margin-right: 21%;
-    background:black;
+   color:red;
+   
    
   }
   .text3
@@ -48,6 +44,14 @@
     text-align: center;
    z-index:2;
    color:orange;
+  }
+  .text4{
+     font-size: 30;
+    font-family: arial;
+    
+    text-align: center;
+   z-index:2;
+   color:graye;
   }
 </style>
 </head>
@@ -109,10 +113,12 @@
 </div>
 <div class="wall1">
   <div class="text1">YOUR FAVORITE SOURCE OF 
-</div>
+  </div>
   <div class="text2">FREE BOOTSTRAP THEMES</div>
-</body>
   <div class="text3">____</div>
+  <div class="text4">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!
+  </div>
+</div>
 </body>
 
 </html>
