--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
    color:orange;
   }
   .text4{
+    margin-top:10;
      font-size: 30;
     font-family: arial;
     
     text-align: center;
    z-index:2;
-   color:graye;
+   color:gray;
   }
 </style>
 </head>
