--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
   <div class="text3">____</div>
   <div class="text4">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!
   </div>
+  <div class="text3">
+  <center><button type="button" class="btn btn-default">Default</button></center>
+  </div>
 </div>
 </body>
 
