--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="text4">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!
   </div>
   <div class="text3">
-  <center><button type="button" class="btn btn-default">Default</button></center>
+  <center><button type="button" class="btn btn-default btn-lg">Find out more</button></center>
   </div>
 </div>
 </body>
