--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   .text1
   {    margin-top: 200;
     font-size:60;
-    font-family: cursive;
+    font-family: cursivearial;
     font-weight: bolder;
     text-align: center;
    z-index:2;
@@ -27,7 +27,7 @@
   .text2
   {    margin-top: 0;
     font-size: 60;
-    font-family: cursive;
+    font-family: arial;
     font-weight: bolder;
     text-align: center;
    z-index:2;
@@ -39,7 +39,7 @@
   {
     margin-top:20;
     font-size: 40;
-    font-family: cursive;
+    font-family: arial;
     font-weight: bolder;
     text-align: center;
    z-index:2;
@@ -53,6 +53,13 @@
     text-align: center;
    z-index:2;
    color:gray;
+  }
+  
+  .wall2>div{
+    text:align:center;
+    font-family:Arial;
+    z-index:2;
+    color:white;
   }
 </style>
 </head>
@@ -119,10 +126,21 @@
   <div class="text3">____</div>
   <div class="text4">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!
   </div>
-  <div class="text3">
+  <div class="text5">
   <center><button type="button" class="btn btn-default btn-lg">Find out more</button></center>
   </div>
 </div>
+
+<div class="wall2" style="background-red;height:800px;width:100%;z-index:1;">
+  <div class="txt1">We've got what you need!</div>
+   <div class="txt2">__</div>
+    <div class="txt3">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</div>
+    <div class="txt4">
+  <center><button type="button" class="btn btn-default btn-lg">Get Started</button></center>
+  </div>
+    
+</div>    
+
 </body>
 
 </html>
