--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </div>
 </div>
 
-<div class="wall2" style="background-red;height:800px;width:100%;z-index:1;">
+<div class="wall2" style="background-color:red;height:1500px;width:100%;z-index:1;">
   <div class="txt1">We've got what you need!</div>
    <div class="txt2">__</div>
     <div class="txt3">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</div>
