--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
     z-index:2;
     color:white;
   }
+   .txt1{
+    margin-top:1000;
+     font-size: 30;
+    font-family: arial;
+    
+    text-align: center;
+   z-index:2;
+   color:white;
+  }
 </style>
 </head>
 <body >
