--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
     z-index:2;
     color:white;
   }
-   .txt1{
-    margin-top:1000;
-     font-size: 30;
+  .txt1
+  {    margin-top: 1000;
+    font-size:30;
     font-family: arial;
-    
+    font-weight: bolder;
     text-align: center;
    z-index:2;
    color:white;
+   
+   
   }
 </style>
 </head>
