--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
    }
    
    .txt2
-  {    margin-top: 10;
-    font-size:50;
+  {    margin-top: -19;
+    font-size: 50;
     font-family: arial;
     font-weight: bolder;
     text-align: center;
@@ -90,8 +90,8 @@
    color:white;
  }
   .txt3
-  {    margin-top: 10;
-    font-size:25;
+  {       margin-top: 19;
+    font-size: 19;
     font-family: arial;
     font-weight: bolder;
     text-align: center;
@@ -100,6 +100,11 @@
    
    
   }
+  
+  .txt4{
+    margin-top:40;
+  }
+  
 </style>
 </head>
 <body >
