--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
    color:orange;
   }
   .text4{
-    margin-top:10;
+    margin-top: 30;
      font-size: 30;
     font-family: arial;
     
@@ -180,7 +180,7 @@
    <div class="txt2">__</div>
     <div class="txt3">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</div>
     <div class="txt4">
-  <center><button type="button" class="btn btn-default btn-lg">Get Started</button></center>
+  <center><button type="button" class="btn btn-default btn-lg">Get Started!</button></center>
   </div>
     
 </div>    
