--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     z-index: 1;
     margin-top: 667;
   }
+  .wall3{
+    background-color: white;
+    position: absolute;
+    
+    height: 600;
+    width: 100%;
+    z-index: 1;
+    margin-top: 1067;
+  }
   .text1
   {    margin-top: 200;
     font-size:60;
@@ -183,7 +192,11 @@
   <center><button type="button" class="btn btn-default btn-lg">Get Started!</button></center>
   </div>
     
-</div>    
+</div> 
+
+<div class="wall3">
+  </div>
+  
 
 </body>
 
