--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     background-color: white;
     position: absolute;
     
-    height: 600;
+    height: 480;
     width: 100%;
     z-index: 1;
     margin-top: 1067;
@@ -113,7 +113,14 @@
   .txt4{
     margin-top:40;
   }
-  
+  .t1{font-size: 50;
+  margin-top:80;
+    font-family: arial;
+    font-weight: bolder;
+    text-align: center;
+   z-index:2;
+    color:black;
+  }
 </style>
 </head>
 <body >
@@ -195,6 +202,9 @@
 </div> 
 
 <div class="wall3">
+  <div class="t1">
+    At Your Service !
+  </div>
   </div>
   
 
