--- a/index.html
+++ b/index.html
@@ -216,6 +216,20 @@
   </div>
   <div class="t2">__</div>
   </div>
+  <div class="row">
+    <div class="col-md-3 col-xs-3">
+      <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
+    </div>
+    <div class="col-md-3 col-xs-3">
+      <span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+    </div>
+    <div class="col-md-3 col-xs-3">
+      <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span>
+    </div>
+    <div class="col-md-3 col-xs-3">
+      <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+    </div>
+  </div>
   
 
 </body>
